--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Poppins:wght@200;300;400;500;600;700&family=Quicksand:wght@300;400&display=swap');
+:root{
+  --font-poppins: 'Poppins', sans-serif;
+  --background : #141414;  
+  --box-color : #262626;
+  --text-color:#fff;
+  --font-regular : 400;
+  --tex-light : #828282;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,*::after,*::before{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-poppins);
+  background-color: var(--background);
+  color: var(--text-color);
+  transition: 0.21s;
+  transition-timing-function: ease-in;
+  font-weight: 400;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  overflow-x: hidden!important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li,a{
+  text-decoration: none;
+  list-style: none;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  max-width: 1200px;
+  margin: 1rem auto;
 }
